--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://NTYLien.github.io/Eproject-rainwaterharvesting",
+  "homepage": ".",
   "name": "rainwaterharvesting",
   "version": "0.1.0",
   "private": true,
