update project page

--- a/src/ProjectData.json
+++ b/src/ProjectData.json
@@ -1,113 +1,97 @@
 [
     {
         "id": "1",
-        "imgurl": "https://picsum.photos/200?random=1",
-        "name": "Design & Consulting",
-        "title": "Weitbick Innovation Campus Project",
-        "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam qui illo eum ea magnam, dolorem iste numquam.",
-        "mainContent": "Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat",
-        "subMainContent": "Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat",
-        "img1": "https://picsum.photos/200?random=1",
-        "img2": "https://picsum.photos/200?random=2",
-        "img3": "https://picsum.photos/200?random=3",
-        "size": "3000 sq.m.",
-        "location": "Limassol, Cyprus",
+        "imgurl": "https://go2joy.s3.ap-southeast-1.amazonaws.com/blog/wp-content/uploads/2022/04/25114347/ba-na-hills-o-dau-768x512.jpg",
+        "name": "Ba Na Hills",
+        "title": "Ba Na Hills Project",
+        "description": "The project of rainwater harvesting on the mountain",
+        "mainContent": "Ba Na Mountain is located in Hoa Ninh Commune, Hoa Vang District. It is about 40 km to the West of Da Nang city center. Ba Na’s tourist center is located at the peak of Mount Chua, 1489 meters above sea level. Ba Na ecotourism area attracts visitors with beautiful natural scenery. And the climate is always around 17-20 degrees Celsius. It’s not wrong to say that Ba Na is known as the “green lung” of Da Nang City. Because this is the only place that can bring visitors cool climate, fresh and feel great 4 seasons in one day.",
+        "subMainContent": "The Ba Na Hills Rainwater Harvesting Project in Vietnam aims to conserve water resources and promote sustainability through comprehensive rainwater collection and distribution systems. By engaging local communities in educational programs, the project fosters awareness and encourages eco-friendly practices. Ultimately, it seeks to enhance environmental resilience, mitigate drought impacts, and establish responsible water management practices in the Ba Na Hills region.",
+        "img1": "https://go2joy.s3.ap-southeast-1.amazonaws.com/blog/wp-content/uploads/2022/04/25114347/ba-na-hills-o-dau-768x512.jpg",
+        "img2": "https://banahill.vn/user-upload/imgs/kinh-nghiem-du-lich-ba-na-hill.jpg",
+        "img3": "https://vietnam.travel/sites/default/files/inline-images/shutterstock_1343287187.jpg",
+        "size": "45,300 sq.m.",
+        "location": "Da Nang City, Vietnam",
         "year": 2024,
         "type": "commercial"
     },
     {
         "id": "2",
-        "imgurl": "https://picsum.photos/200?random=1",
-        "name": "Design & Consulting",
-        "title": "Ula m ipsum dolor sit am",
-        "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam qui illo eum ea magnam, dolorem iste numquam.",
-        "mainContent": "Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat",
-        "subMainContent": "Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat",
-        "img1": "https://picsum.photos/200?random=1",
-        "img2": "https://picsum.photos/200?random=2",
-        "img3": "https://picsum.photos/200?random=3",
-        "size": "3000 sq.m.",
-        "location": "Limassol, Cyprus",
+        "imgurl": "https://duan-vinhomes.com/wp-content/uploads/2022/09/vinhomes-central-park-du-an-danh-dau-ten-tuoi-vinhomes-tai-tphcm.jpg",
+        "name": "VinHomes Central Park",
+        "title": "VinHomes Central Park Project",
+        "description": "The project of rainwater harvesting in a large apartment complex",
+        "mainContent": "Vinhomes Central Park is Vingroup's first major project in Ho Chi Minh City, inspired by the world-famous Central Park New York area. Possessing rare golden coordinates, Vinhomes Central Park location at 208 Nguyen Huu Canh, Ward 22, Binh Thanh District is considered the economic center of the city.",
+        "subMainContent": "The Rainwater Harvesting Project in Vinhomes Central Park aims to revolutionize water management by collecting rainwater for various uses. Through infrastructure and storage facilities, it conserves resources and reduces reliance on external sources. Educational campaigns engage residents, promoting sustainable water usage. Ultimately, the initiative fosters environmental stewardship, enhances water sustainability, and creates a greener living environment.",
+        "img1": "https://bdsvinhomes.com.vn/wp-content/uploads/2020/03/phoi-canh-vinhomes-central-park.jpg",
+        "img2": "https://bdsvinhomes.com.vn/wp-content/uploads/2020/03/vinhomes-central-park.jpg",
+        "img3": "https://bdsvinhomes.com.vn/wp-content/uploads/2020/04/mat-bang-khu-biet-thu-vinhomes-central-park.jpg",
+        "size": "40,000 sq.m.",
+        "location": "Ho Chi Minh City, Vietnam",
         "year": 2024,
         "type": "commercial"
     },
     {
         "id": "3",
-        "imgurl": "https://picsum.photos/200?random=1",
-        "name": "Design & Consulting",
-        "title": "Weitbick Innovation Campus Project",
-        "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam qui illo eum ea magnam, dolorem iste numquam.",
-        "mainContent": "Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat",
-        "subMainContent": "Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat",
-        "img1": "https://picsum.photos/200?random=1",
-        "img2": "https://picsum.photos/200?random=2",
-        "img3": "https://picsum.photos/200?random=3",
-        "size": "3000 sq.m.",
-        "location": "Limassol, Cyprus",
+        "imgurl": "https://guidevietnam.org/wp-content/uploads/2020/07/Sapa-trong-may-mu.jpg",
+        "name": "Sapa Town",
+        "title": "Sapa Town Project",
+        "description": "The project of rainwater harvesting in a developing remote area",
+        "mainContent": "Sapa Town is located in Lao Cai Province, north-west Vietnam, and 350 km north-west of Hanoi city, close to the border with China. It is famous both for its fine, rugged scenery and for its rich cultural diversity. French used to consider Sapa as Summer Capital of Northern Vietnam in the early decades of the 20th century. Its naturally gifted beauty keeps attracting more and more people to spend their vacation there since then. Particularly, the place is the foremost choice for honeymoon couples!",
+        "subMainContent": "In Sapa Town, rainwater harvesting tackles water scarcity by capturing precipitation through sustainable collection systems. This practice conserves water resources, lessening reliance on local supplies. Through community involvement and education, residents adopt rainwater harvesting as an eco-friendly solution. Ultimately, it fosters environmental preservation and enhances water security, ensuring a resilient future for Sapa Town nestled in Vietnam's northern highlands.",
+        "img1": "https://guidevietnam.org/wp-content/uploads/2020/07/Sapa-trong-may-mu.jpg",
+        "img2": "https://guidevietnam.org/wp-content/uploads/2015/03/Sapa-in-the-afternoon.jpg",
+        "img3": "http://visavietnam.net.vn/upload/the-beauty-of-sapa-town-in-vietnam_10.jpg",
+        "size": "15,000 sq.m.",
+        "location": "Lao Cai City, Vietnam",
         "year": 2024,
         "type": "commercial"
     },
     {
         "id": "4",
-        "imgurl": "https://picsum.photos/200?random=1",
-        "name": "Design & Consulting",
-        "title": "Weitbick Innovation Campus Project",
-        "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam qui illo eum ea magnam, dolorem iste numquam.",
-        "mainContent": "Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat",
-        "subMainContent": "Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat",
-        "img1": "https://picsum.photos/200?random=1",
-        "img2": "https://picsum.photos/200?random=2",
-        "img3": "https://picsum.photos/200?random=3",
-        "size": "3000 sq.m.",
-        "location": "Limassol, Cyprus",
+        "imgurl": "https://www.nhvillage.net/content/uploads/cms/2022/09/11/nha-cho-mua-15.jpg",
+        "name": "Hung Yen Province",
+        "title": "House 1 Project",
+        "description": "The project of rainwater harvesting in a local house",
+        "mainContent": "This is a house for collecting rainwater, an experiment of reintroducing the familiar Vietnamese rural house landscape into a typical city Tube house typology. The owner is a family of four people, a young couple with two children. The wife is a teacher so she need a space for students to study. Hung Yen province, where the house is located, is an ancient typical rice cultivation area in the northern delta region of Vietnam. Rainwater use used to be popular for daily life, however, a quick urbanization here is observing a fade of this tradition. Because the air still remains pure and the municipal supply water has been not adequate yet in quality and quantity, the new house is expected to be able to collect and use rainwater as much as possible.",
+        "subMainContent": "The roof was designed like a split gable and butterfly and all gutters are expressed from inside as big curved beams. The main rainwater collecting elements such as “Gutters”, water tanks and drain pipes are visible. The stair location is in the center and connects the split-level floors so that people inside can see the roof and landscape outside. People living in the house will experience the landscape through windows on the rainy days, listening to the sound of rain. This house is not only for water, the sunlight and wind ventilation systems are also designed to save energy and make this house full of nature inside.",
+        "img1": "https://www.nhvillage.net/content/uploads/cms/2022/09/11/nha-cho-mua-3.jpg",
+        "img2": "https://www.nhvillage.net/content/uploads/cms/2022/09/11/nha-cho-mua-12.jpg",
+        "img3": "https://www.nhvillage.net/content/uploads/cms/2022/09/11/nha-cho-mua-11.jpg",
+        "size": "210 sq.m.",
+        "location": "Hung Yen Province, Vietnam",
         "year": 2024,
         "type": "residential"
     },
     {
         "id": "5",
-        "imgurl": "https://picsum.photos/200?random=1",
-        "name": "Design & Consulting",
-        "title": "Weitbick Innovation Campus Project",
-        "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam qui illo eum ea magnam, dolorem iste numquam.",
-        "mainContent": "Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat",
-        "subMainContent": "Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat",
-        "img1": "https://picsum.photos/200?random=1",
-        "img2": "https://picsum.photos/200?random=2",
-        "img3": "https://picsum.photos/200?random=3",
-        "size": "3000 sq.m.",
-        "location": "Limassol, Cyprus",
+        "imgurl": "https://pix8.agoda.net/hotelImages/435/4355206/4355206_18030510200062555291.jpg?ca=6&ce=1&s=1024x",
+        "name": "Soc Trang Province",
+        "title": "House 2 Project",
+        "description": "The project of rainwater harvesting in a local house",
+        "mainContent": "Vinh Chau was among the towns seeing moderate rainfall in the delta (~ 1,776 mm/year), and rainwater was used frequently by the local people. However, local households did not employ proper harvesting techniques, hence the harvested rainwater did not meet the required quality for domestic use. Additionally, difficulties in using tap water, groundwater, and surface water were notable. The quality of tap water was not suitable for household consumption because of the presence of aluminum, and the price was high relative to the household’s income. Salinization of surface and groundwater, as well as degradation in quantity of ground water, made water of acceptable quality scarce.",
+        "subMainContent": "This design expresses the rainwater collecting system, takes natural light and wind inside the house. Besides, with a limited total budget of 45.000 USD, the economical and familiar materials from Vietnamese rural areas such as terracotta tiles and woven bamboo are selected. In this way the design aims to bring activities and life-style in the house close to nature and recall the feeling of living in the Vietnamese village nearby.",
+        "img1": "https://pix8.agoda.net/hotelImages/435/4355206/4355206_18030510200062555291.jpg?ca=6&ce=1&s=1024x",
+        "img2": "https://www.nhvillage.net/content/uploads/cms/2022/09/11/nha-cho-mua-20.jpg",
+        "img3": "https://www.nhvillage.net/content/uploads/cms/2022/09/11/nha-cho-mua-19.jpg",
+        "size": "230 sq.m.",
+        "location": "Soc Trang Province, Vietnam",
         "year": 2024,
         "type": "residential"
     },
     {
         "id": "6",
-        "imgurl": "https://picsum.photos/200?random=1",
-        "name": "Design & Consulting",
-        "title": "Weitbick Innovation Campus Project",
-        "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam qui illo eum ea magnam, dolorem iste numquam.",
-        "mainContent": "Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat",
-        "subMainContent": "Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat",
-        "img1": "https://picsum.photos/200?random=1",
-        "img2": "https://picsum.photos/200?random=2",
-        "img3": "https://picsum.photos/200?random=3",
-        "size": "3000 sq.m.",
-        "location": "Limassol, Cyprus",
-        "year": 2024,
-        "type": "residential"
-    },
-    {
-        "id": "7",
-        "imgurl": "https://picsum.photos/200?random=1",
-        "name": "Design & Consulting",
-        "title": "Weitbick Innovation Campus Project",
-        "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam qui illo eum ea magnam, dolorem iste numquam.",
-        "mainContent": "Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat",
-        "subMainContent": "Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat",
-        "img1": "https://picsum.photos/200?random=1",
-        "img2": "https://picsum.photos/200?random=2",
-        "img3": "https://picsum.photos/200?random=3",
-        "size": "3000 sq.m.",
-        "location": "Limassol, Cyprus",
+        "imgurl": "https://tropicalspaceil.com/upload/baiviet/19-8914.jpg",
+        "name": "Long An Province",
+        "title": "House 3 Project",
+        "description": "The project of rainwater harvesting in a local house",
+        "mainContent": "The architects were inspired by the traditional house want to design a house with the traditional structure accompanied by 3 separate spaces and slope roof, but using a modern and strong architectural language. At the same time, maximizing the ventilation efficiency by dividing the roof into two parts and having a courtyard; then allocating two corridors to connecting the roof. This way created a courtyard and big walls. These are porous walls which can bring breeze into the house.",
+        "subMainContent": "The rainwater system and municipal water supply system were integrated together so that the family can choose which to use depending on the rain quantity. Rainwater is cleaned by a filter in the traditional way before flowing inside the tanks. There are 3 rainwater tanks in total can collect a maximum of 32m3. According to the owner, from April to October, there is no need to use the municipal water supply and at the rest period, rainwater is 50% enough for daily using.",
+        "img1": "https://tropicalspaceil.com/upload/baiviet/22-5752.jpg",
+        "img2": "https://tropicalspaceil.com/upload/baiviet/15-7480.jpg",
+        "img3": "https://tropicalspaceil.com/upload/baiviet/14-3393.jpg",
+        "size": "300 sq.m.",
+        "location": "Long An Province, Vietnam",
         "year": 2024,
         "type": "residential"
     }
